add delete pairing history feature
+ adjust styling in pairing history panel to use grid layout since we have more
rows and columns now and flex box is hard to use to style this. Using plain
margins wouldn't be as clean

- not implementing hover state yet since I plan to adjust the way we use svg to
make styling svg easier

[#132044017]